# OpenKaguya

./: .gitignore  CLAUDE.md  OpenKaguya-v2-Design_1.md  README.md  clean.py  elements.txt  pyproject.toml  test_browser.py  test_gap.py  test_group.py  test_output.txt  test_ws_recv.py  项目设计.md  项目设计具体化.md
.claude/: settings.json  settings.local.json
config/: default.example.toml  default.toml  persona.toml  secrets.example.toml  新标签页.html
config/新标签页_files/: m=_b,_tp  saved_resource.html
docs/: wechat-adapter-API.md  wechat-adapter-Message-API.md  wechat-adapter-朋友圈API文档.md
scripts/: test_yolo_detection.py
src/kaguya/: __init__.py  config.py  main.py
src/kaguya/adapters/: base.py  cli.py  telegram.py  wechat.py  wechat_tools.py
src/kaguya/admin/: __init__.py  api.py
src/kaguya/admin/static/: chat.html  index.html  settings.html
src/kaguya/core/: consciousness.py  engine.py  group.py  identity.py  memory.py  middleware.py  router.py  types.py
src/kaguya/desktop/: __init__.py  controller.py  notifications.py  screen.py  tools.py
src/kaguya/extensions/: __init__.py  base.py  manager.py
src/kaguya/llm/: client.py  embedding.py
src/kaguya/memory/: database.py  middleware.py  retriever.py  topic_manager.py
src/kaguya/phone/: __init__.py  controller.py  screen.py  tools.py
src/kaguya/providers/: __init__.py  qwen_image.py
src/kaguya/tools/: avatar.py  browser.py  builtin.py  common.py  image.py  memory_tools.py  notes.py  registry.py  sub_agent.py  task.py  toolkit_router.py  web_search.py  workspace.py
tests/: test_browser.py  test_chat.py  test_config.py  test_consciousness.py  test_desktop.py  test_extensions.py  test_group.py  test_history.py  test_loop.py  test_memory.py  test_notifications.py  test_output.txt  test_phone_manual.py  test_sns.py  test_sub_agent.py  test_tools.py  test_unlock_manual.py  test_wechat.py
