[project]
name = "openkaguya"
version = "2.0.0"
description = "开源版辉夜姬 v2 — 通过 ADB 控制手机的人格化 AI 伴侣"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "aiohttp>=3.11.0",
    "loguru>=0.7.0",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "winrt-Windows.UI.Notifications.Management>=2.0.0",
    "winrt-Windows.UI.Notifications>=2.0.0",
    "ultralytics>=8.0.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.49.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
kaguya = "kaguya.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kaguya"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
